Fixed horizontal scroll.

--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
     display: flex;
     flex-direction: column;
     background-color: rgb(240, 239, 225);
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 h1 { /* Place elsewhere? */
@@ -280,7 +282,7 @@ flex-grow: 0; */
     color: rgb(225, 240, 234);
 }
 
-    list-style: none;
+    /* list-style: none;
     padding: 0;
     margin: 0;
 
@@ -288,7 +290,7 @@ flex-grow: 0; */
 
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-gap: 15px;
+    grid-gap: 15px; */
 
 
 /* My words MOBILE */
